# By default, we enable "memory locking" on operating systems that support it.
option('disable_memorylocking',  type: 'boolean', value: false)
# By default, we enable runtime checks, for safety.
option('disable_runtime_checks', type: 'boolean', value: false)
# By default, we enable cbc_v2 as the default and only supported crypto method.
option('enable_cbc_v2', type: 'boolean', value: true)
# By default we do not enable ctr_v1.
option('enable_ctr_v1', type: 'boolean', value: false)
